networks.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-network
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-network
---
apiVersion: v1
kind: Namespace
metadata:
  name: logstash-network
