logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: logstash-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.17.10
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/logstash/pipeline/
        ports:
        - containerPort: 5044
          name: beats
        - containerPort: 5045
          name: jenkins
      volumes:
      - name: config-volume
        configMap:
          name: logstash-config
