jenkins-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk17
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - |
                [...]
        command:
        - /bin/sh
        - -c
        - |
          # Install plugins
          echo "Installing plugins..."
          jenkins-plugin-cli --plugins kubernetes:latest workflow-aggregator:latest git:latest pipeline-stage-view:latest logstash:latest timestamper:latest
          # Start Jenkins
          echo "Starting Jenkins..."
          /usr/local/bin/jenkins.sh
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: jnlp
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: jenkins-init-config
          mountPath: /usr/share/jenkins/ref/init.groovy.d/
      volumes:
      - name: jenkins-home
        emptyDir: {}
      - name: jenkins-init-config
        configMap:
          name: jenkins-init-config
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins-network
  labels:
    app: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  - port: 50000
    targetPort: 50000
    name: jnlp
  selector:
    app: jenkins
